--- a/src/pages/home/scan_section/scan_section.css
+++ b/src/pages/home/scan_section/scan_section.css
@@ -48,7 +48,7 @@ section#scan div.left div.content div.message {
 
     section#scan div.left {
         width: 100%;
-        font-size: min(1em, 2.5vw, 3vh);
+        font-size: min(1em, 4vw, 3vh);
     }
 
 }
